tests/baselines/reference/invalidEnumAssignments.errors.txt
==== tests/cases/compiler/invalidEnumAssignments.ts (6 errors) ====
    enum E {
        A,
        B
    }
    
    enum E2 {
        A,
        B
    }
    
    var e: E;
    var e2: E2;
    
    e = E2.A;
    ~
!!! invalidEnumAssignments.ts(14,1): error TS2011: Type 'E2' is not assignable to type 'E'.
    e2 = E.A;
    ~~
!!! invalidEnumAssignments.ts(15,1): error TS2011: Type 'E' is not assignable to type 'E2'.
    e = <void>null;
    ~
!!! invalidEnumAssignments.ts(16,1): error TS2011: Type 'void' is not assignable to type 'E'.
    e = {};
    ~
!!! invalidEnumAssignments.ts(17,1): error TS2011: Type '{}' is not assignable to type 'E'.
    e = '';
    ~
!!! invalidEnumAssignments.ts(18,1): error TS2011: Type 'string' is not assignable to type 'E'.
    
    function f<T>(a: T) {
        e = a;
        ~
!!! invalidEnumAssignments.ts(21,5): error TS2011: Type 'T' is not assignable to type 'E'.
    }